first working terraform configuration along with some restructuring

--- a/ui/templates/friends.html
+++ b/ui/templates/friends.html
@@ -235,7 +235,8 @@
     {{ range .FriendRequests }}
     <div class="request-card">
       <div class="photo-container">
-        <img class="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .FromUsername}}">
+        <img class="profile-photo-image"
+          src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .FromUsername}}">
         <div class="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content">
         </div>
       </div>
@@ -267,7 +268,8 @@
     {{ range .Friends }}
     <div class="friend-card">
       <div class="photo-container">
-        <img class="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+        <img class="profile-photo-image"
+          src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
         <div class="crop-filter">
         </div>
       </div>
