--- a/ui/templates/profile-photo-viewer.html
+++ b/ui/templates/profile-photo-viewer.html
@@ -99,7 +99,7 @@
     </div>
     <!-- <div id="container-right"> -->
     <div id="photo-container">
-      <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+      <img id="profile-photo-image" src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
       <div id="crop-filter"></div>
 
     </div>
