--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -126,14 +126,6 @@
   </h1>
   <div id="profile-subcontainer">
     <div id="user-info">
-      <!-- <div class="info-item"> -->
-      <!--   <span> -->
-      <!--     Member since: -->
-      <!--   </span> -->
-      <!--   <span> -->
-      <!--     June 1st, 2024 -->
-      <!--   </span> -->
-      <!-- </div> -->
       <div class="info-item">
         <span>
           Total Points:
@@ -170,7 +162,7 @@
     </div>
 
     <div id="photo-container">
-      <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+      <img id="profile-photo-image" src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
       <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
 
     </div>
