--- a/ui/templates/upload-profile-photo.html
+++ b/ui/templates/upload-profile-photo.html
@@ -100,7 +100,8 @@
 
 
         <div id="photo-container">
-          <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+          <img id="profile-photo-image"
+            src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
           <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
 
         </div>
