--- a/ui/templates/search-results.html
+++ b/ui/templates/search-results.html
@@ -11,7 +11,8 @@
       hx-target="#page-content" hx-trigger="click" {{ else }} {{ end }}>
 
       <div class="photo-container">
-        <img class="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/{{ .Username}}">
+        <img class="profile-photo-image"
+          src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
         <div class="crop-filter"></div>
       </div>
       <div class="username-container">
