--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -1,9 +1,13 @@
 {{ define "base"}}
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
   <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
@@ -12,119 +16,121 @@
   <script src="https://unpkg.com/htmx.org@1.9.12"></script>
 </head>
 
-<style>
-  div {
-    all: unset;
-  }
+<body>
+  <style>
+    div {
+      all: unset;
+    }
 
-  * {
-    cursor: url('/static/public/cursor-1.png'), auto;
-    box-sizing: border-box;
-  }
+    * {
+      cursor: url('/static/public/cursor-1.png'), auto;
+      box-sizing: border-box;
+    }
 
-  body {
-    margin-top: 25px;
-    background-color: moccasin;
-  }
+    body {
+      margin-top: 25px;
+      background-color: moccasin;
+    }
 
-  main {
-    position: fixed;
-    height: calc(100vh - 100px - 58.5px - 11px);
-    width: calc(100% - 156px);
-    margin-top: 83px;
-    margin-left: 147px;
-    overflow-y: scroll;
-  }
+    main {
+      position: fixed;
+      height: calc(100vh - 100px - 58.5px - 11px);
+      width: calc(100% - 156px);
+      margin-top: 83px;
+      margin-left: 147px;
+      overflow-y: scroll;
+    }
 
-  .card {
-    border: 3px solid black;
-    border-radius: 10px;
-    box-shadow: 5px 5px black;
-  }
-</style>
+    .card {
+      border: 3px solid black;
+      border-radius: 10px;
+      box-shadow: 5px 5px black;
+    }
+  </style>
 
-<style id="side-bar-styles">
-  .side-bar-item {
-    text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 2px solid darkseagreen;
-    font-family: Cheto;
-    font-size: 30px;
-    color: cornsilk;
-  }
+  <style id="side-bar-styles">
+    .side-bar-item {
+      text-align: center;
+      padding-left: 20px;
+      padding-right: 20px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      border-bottom: 2px solid darkseagreen;
+      font-family: Cheto;
+      font-size: 30px;
+      color: cornsilk;
+    }
 
-  .side-bar-item:hover {
-    background-color: darkolivegreen;
-  }
+    .side-bar-item:hover {
+      background-color: darkolivegreen;
+    }
 
-  .side-bar-item:nth-of-type(1) {
-    border-top: 2px solid darkseagreen;
-  }
-</style>
+    .side-bar-item:nth-of-type(1) {
+      border-top: 2px solid darkseagreen;
+    }
+  </style>
 
-<script src="/static/js/top-bar.js"></script>
-<script src="/static/js/side-bar.js"></script>
-<top-bar>
-  <div slot="username" id="username-top-right">{{ .Username }}</div>
-</top-bar>
+  <script src="/static/js/top-bar.js"></script>
+  <script src="/static/js/side-bar.js"></script>
+  <top-bar>
+    <div slot="username" id="username-top-right">{{ .Username }}</div>
+  </top-bar>
 
-<side-bar id="side-bar">
-  <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">
-    Profile
-  </div>
-  <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">
-    Games
-  </div>
-  <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item">
-    Friends
-  </div>
-</side-bar>
-
-
-
-<main>
-  <div id="page-container">
-    <div id="page-content">
-      {{ if eq .PartialTemplate "sign-in" }}
-      {{ template "sign-in" .Data}}
-      {{ else if eq .PartialTemplate "create-account" }}
-      {{ template "create-account" .Data }}
-      {{ else if eq .PartialTemplate "create-question"}}
-      {{ template "create-question" .Data}}
-      {{ else if eq .PartialTemplate "profile"}}
-      {{ template "profile" .Data}}
-      {{ else if eq .PartialTemplate "games" }}
-      {{ template "games" .Data}}
-      {{ else if eq .PartialTemplate "gameplay" }}
-      {{ template "gameplay" .Data}}
-      {{ else if eq .PartialTemplate "create-game" }}
-      {{ template "create-game" .Data}}
-      {{ else if eq .PartialTemplate "friends" }}
-      {{ template "friends" .Data}}
-      {{ else if eq .PartialTemplate "upload-profile-photo"}}
-      {{ template "upload-profile-photo" .Data}}
-      {{ else if eq .PartialTemplate "invite-friends"}}
-      {{ template "invite-friends" .Data}}
-      {{ else if eq .PartialTemplate "results"}}
-      {{ template "results" .Data }}
-      {{ else if eq .PartialTemplate "no-question-yet"}}
-      {{ template "no-question-yet" .Data }}
-      {{ else if eq .PartialTemplate "other-user-profile" }}
-      {{ template "other-user-profile" .Data }}
-      {{ else }}
-      {{ template "index"}}
-      {{ end }}
+  <side-bar id="side-bar">
+    <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">
+      Profile
     </div>
-  </div>
-</main>
-<footer-component>
-</footer-component>
+    <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">
+      Games
+    </div>
+    <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item">
+      Friends
+    </div>
+  </side-bar>
+
+
+
+  <main>
+    <div id="page-container">
+      <div id="page-content">
+        {{ if eq .PartialTemplate "sign-in" }}
+        {{ template "sign-in" .Data}}
+        {{ else if eq .PartialTemplate "create-account" }}
+        {{ template "create-account" .Data }}
+        {{ else if eq .PartialTemplate "create-question"}}
+        {{ template "create-question" .Data}}
+        {{ else if eq .PartialTemplate "profile"}}
+        {{ template "profile" .Data}}
+        {{ else if eq .PartialTemplate "games" }}
+        {{ template "games" .Data}}
+        {{ else if eq .PartialTemplate "gameplay" }}
+        {{ template "gameplay" .Data}}
+        {{ else if eq .PartialTemplate "create-game" }}
+        {{ template "create-game" .Data}}
+        {{ else if eq .PartialTemplate "friends" }}
+        {{ template "friends" .Data}}
+        {{ else if eq .PartialTemplate "upload-profile-photo"}}
+        {{ template "upload-profile-photo" .Data}}
+        {{ else if eq .PartialTemplate "invite-friends"}}
+        {{ template "invite-friends" .Data}}
+        {{ else if eq .PartialTemplate "results"}}
+        {{ template "results" .Data }}
+        {{ else if eq .PartialTemplate "no-question-yet"}}
+        {{ template "no-question-yet" .Data }}
+        {{ else if eq .PartialTemplate "other-user-profile" }}
+        {{ template "other-user-profile" .Data }}
+        {{ else }}
+        {{ template "index"}}
+        {{ end }}
+      </div>
+    </div>
+  </main>
+  <footer-component>
+  </footer-component>
+</body>
 
 </html>
 
