fixed zombie process issue. Properly creating user and game at startup. Using queryparam to determine oob for profile page.

--- a/ui/templates/upload-profile-photo.html
+++ b/ui/templates/upload-profile-photo.html
@@ -1,4 +1,8 @@
 {{ define "upload-profile-photo"}}
+<div slot="username" hx-swap-oob="true" id="username-top-right">
+  {{ .Username }}
+</div>
+
 <div id="page-content">
   <style>
     * {
