--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -120,16 +120,11 @@
       </tr>
     </thead>
     <tbody>
-      <!-- <tr> -->
-      <!--   <td>All Members</td> -->
-      <!--   <td>1500</td> -->
-      <!--   <td>What is the best day of the week?</td> -->
-      <!-- </tr> -->
       {{ range .CurrentGames }}
       <tr hx-get="/auth/games/{{ .GameId }}" hx-target="#page-content" hx-push-url="true">
         <td>{{ .GameName}}</td>
         <td>{{ .GameTotalMembers}}</td>
-        <td></td>
+        <td>{{ .QuestionText }}</td>
       </tr>
       {{ end }}
     </tbody>
