--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -49,13 +49,13 @@
   <div id="buttons-container">
     <button-component>
       <button slot="button" id="button-element" hx-get="/create-account" hx-target="#page-content" hx-push-url="true"
-        hx-swap="outerhtml" hx-target="main">
+        hx-swap="outerHTML">
         Create An Account
       </button>
     </button-component>
     <button-component>
       <button slot="button" id="button-element" hx-get="/sign-in" hx-target="#page-content" hx-push-url="true"
-        hx-swap="outerhtml" hx-target="main">
+        hx-swap="outerHTML">
         Sign In
       </button>
     </button-component>
