--- a/ui/templates/friends.html
+++ b/ui/templates/friends.html
@@ -88,33 +88,6 @@
     }
 
 
-
-    .photo-container {
-      overflow: hidden;
-      object-fit: contain;
-      position: relative;
-      width: 30px;
-      height: 30px;
-    }
-
-    .profile-photo-image {
-      left: 0;
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      object-fit: cover;
-    }
-
-    .crop-filter {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      background-color: skyblue;
-      mask: radial-gradient(transparent 0%, transparent 69%, skyblue 70%);
-      z-index: 5;
-    }
-
     th {
       height: 40px;
     }
@@ -158,7 +131,7 @@
       gap: 10px;
     }
 
-    .photo-container {
+    .friend-card .photo-container {
       overflow: hidden;
       object-fit: contain;
       position: relative;
@@ -171,7 +144,7 @@
       height: 30px;
     }
 
-    .profile-photo-image {
+    .friend-card .profile-photo-image {
       position: absolute;
       width: 200px;
       height: 200px;
@@ -183,7 +156,7 @@
       height: 30px;
     }
 
-    .crop-filter {
+    .friend-card .crop-filter {
       width: 100%;
       height: 100%;
       position: absolute;
@@ -222,10 +195,11 @@
     .friend-card button {
       background-color: salmon;
     }
+
+    .friend-card button:hover {
+      background-color: darksalmon;
+    }
   </style>
-  <!-- <h1> -->
-  <!--   Friends -->
-  <!-- </h1> -->
   {{ template "search-bar" }}
 
   <h1>
