--- a/ui/templates/games.html
+++ b/ui/templates/games.html
@@ -40,12 +40,12 @@
     }
 
     button {
-      background-color: seagreen;
+      background-color: lightskyblue;
       padding: 10px;
       font-family: Aruma;
       font-size: 20px;
       border-radius: 5px;
-      color: antiquewhite;
+      color: black;
     }
 
     button:hover {
