--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -48,13 +48,13 @@
   </h1>
   <div id="buttons-container">
     <button-component>
-      <button slot="button" id="button-element" hx-get="/create-account" hx-target="#page-content" hx-push-url="true"
-        hx-swap="outerHTML">
+      <button slot="button" id="create-account-button" hx-get="/create-account" hx-target="#page-content"
+        hx-push-url="true" hx-swap="outerHTML">
         Create An Account
       </button>
     </button-component>
     <button-component>
-      <button slot="button" id="button-element" hx-get="/sign-in" hx-target="#page-content" hx-push-url="true"
+      <button slot="button" id="sign-in-button" hx-get="/sign-in" hx-target="#page-content" hx-push-url="true"
         hx-swap="outerHTML">
         Sign In
       </button>
