--- a/ui/templates/sign-in.html
+++ b/ui/templates/sign-in.html
@@ -85,7 +85,7 @@
     }
   </style>
 
-  <button id="page-back-btn" hx-get="/" hx-swap="outerHTML" hx-target="#page-content">
+  <button id="page-back-btn" hx-get="/" hx-swap="outerHTML" hx-target="#page-content" hx-push-url="/">
     &larr;Back
   </button>
 
