--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -89,7 +89,7 @@
     }
   </style>
 
-  <button id="page-back-btn" hx-get="/" hx-swap="outerHTML" hx-target="#page-content">
+  <button id="page-back-btn" hx-get="/" hx-swap="outerHTML" hx-target="#page-content" hx-push-url="/">
     &larr;Back
   </button>
 
