--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet"> -->
   <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+  <script src="/static/js/button-component.js"> </script>
 </head>
 
 <body hx-ext="preload">
