working on caching

--- a/ui/templates/create-game.html
+++ b/ui/templates/create-game.html
@@ -1,15 +1,14 @@
 {{ define "create-game" }}
 
-<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/response-targets.js"></script>
 
 
 
 <div id="page-content" hx-ext="response-targets">
 
+  <script type="module" src="https://unpkg.com/htmx.org@1.9.12/dist/ext/response-targets.js"></script>
   <style id="transition-styles"></style>
   <style id="static-styles">
     #page-content {
-      border: 2px solid black;
       padding: 20px;
       display: block;
     }
