--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -41,7 +41,7 @@
       background-color: seagreen;
       border-radius: 10px;
       box-shadow: 5px 5px black;
-      color: antiquewhite;
+      color: white;
       width: 500px;
     }
 
@@ -106,7 +106,7 @@
     #log-out-button {
       background-color: coral;
       font-family: Cheto;
-      color: antiquewhite;
+      color: white;
       padding: 5px;
       border-radius: 5px;
       margin-top: 5px;
@@ -154,7 +154,8 @@
     </div>
 
     <div id="photo-container">
-      <img id="profile-photo-image" src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
+      <img id="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/{{ .Username}}"
+        alt="{{ .Username }}-profile-photo">
       <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
 
     </div>
