--- a/ui/templates/search-results.html
+++ b/ui/templates/search-results.html
@@ -11,8 +11,7 @@
       hx-target="#page-content" hx-trigger="click" {{ else }} {{ end }}>
 
       <div class="photo-container">
-        <img class="profile-photo-image"
-          src="https://ask-away-s3-bucket.s3.us-west-1.amazonaws.com/public/{{ .Username}}">
+        <img class="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/profile-photos/{{ .Username}}">
         <div class="crop-filter"></div>
       </div>
       <div class="username-container">
