--- a/ui/templates/side-bar.html
+++ b/ui/templates/side-bar.html
@@ -19,19 +19,41 @@
   .side-bar-item:nth-of-type(1) {
     border-top: 2px solid darkseagreen;
   }
+
+  #side-bar {
+    position: fixed;
+    top: 50px;
+    left: 0;
+    z-index: -1;
+    height: 100%;
+    border-right: 4px solid black;
+    background-color: seagreen;
+    padding-top: 100px;
+    gap: 50px;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 </style>
 
 
-<side-bar id="side-bar" hx-swap-oob="outerHTML">
-  <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">Profile
-  </div>
-  <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">Games
-  </div>
-  <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
-    hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item">
-    Friends
-  </div>
-</side-bar>
+<div id="side-bar" hx-swap-oob="outerHTML">
+  <nav>
+    <div role="button" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/profile" class="side-bar-item">
+      Profile
+    </div>
+    <div role="button" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/games" class="side-bar-item">
+      Games
+    </div>
+    <div role="button" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
+      hx-swap="outerHTML" hx-push-url="/auth/friends" class="side-bar-item">
+      Friends
+    </div>
+  </nav>
+</div>
 {{ end }}
