--- a/ui/templates/spin-and-shrink.html
+++ b/ui/templates/spin-and-shrink.html
@@ -1,7 +1,7 @@
 {{ define "spin-and-shrink"}}
 
 <div id="temp-{{ .Data.TargetPage}}" hx-trigger="htmx:afterSettle delay:1s" hx-get="/auth/{{ .Data.TargetPage }}"
-  hx-target="#page-container" hx-swap="innerHTML">
+  hx-target="#page-container" hx-swap="innerHTML" preload="preload:init">
 </div>
 <style>
   @keyframes spin-and-shrink {
