--- a/ui/templates/top-bar.html
+++ b/ui/templates/top-bar.html
@@ -1,12 +1,71 @@
 {{ define "top-bar"}}
+<style>
+  #username-top-right {
+    margin-left: 20px;
+    margin-right: 15px;
+    font-family: Aruma;
+    font-size: 40px;
+    border: 3px solid black;
+    background-color: lightsalmon;
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 5px 5px black;
+  }
+
+  #top-container {
+    z-index: 2;
+    position: fixed;
+    left: -5px;
+    width: 100%;
+    height: 90px;
+    display: flex;
+    align-items: center;
+  }
+
+  #logo {
+    position: absolute;
+    left: 15px;
+    background-color: peachpuff;
+    width: 240px;
+    height: 90px;
+    border: 5px solid black;
+    font-family: Parson;
+    font-style: italic;
+    font-size: 50px;
+    text-align: center;
+    box-shadow: 5px 5px black;
+    border-radius: 10px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    transform: skew(-5deg, -5deg);
+  }
+
+  #top-blue-bar {
+    border-radius: 0 10px 10px 0px;
+    background-color: skyblue;
+    height: 65%;
+    flex-grow: 1;
+    border-top: 3px solid black;
+    border-right: 4px solid black;
+    border-bottom: 4px solid black;
+    box-shadow: 5px 5px black;
+  }
+
+  #logo-text {
+    text-align: center;
+  }
+</style>
 <div id="top-container">
   <div id="logo">
     <div id="logo-text">Ask Away</div>
   </div>
   <div id="top-blue-bar"></div>
-  <div id="top-profile-name">
-    <slot name="username">
-    </slot>
+  <div id="username-top-right">
+    {{ .Username }}
+    <!-- <slot name="username"> -->
+    <!-- </slot> -->
   </div>
 </div>
 {{ end }}
