--- a/ui/templates/results.html
+++ b/ui/templates/results.html
@@ -77,11 +77,11 @@
       font-family: Aruma;
     }
 
-    #point-change {
-
+    #leaderboard {
       display: block;
       text-align: center;
-      font-size: 50px;
+      font-size: 30px;
+      padding: 5px;
     }
 
     #rankings {
@@ -105,7 +105,6 @@
       font-family: Cheto;
     }
   </style>
-
   <div id="subcontainer">
 
     {{ if not .AnswersData }}
@@ -131,8 +130,8 @@
 
 
     <div id="results-right">
-      <span id="point-change">
-        +84
+      <span id="leaderboard">
+        Leaderboard
       </span>
       <div id="rankings">
 
