--- a/ui/templates/top-bar.html
+++ b/ui/templates/top-bar.html
@@ -13,7 +13,7 @@
     box-shadow: 5px 5px black;
   }
 
-  #top-container {
+  #top-bar-container {
     z-index: 2;
     position: fixed;
     left: -5px;
@@ -57,7 +57,7 @@
     text-align: center;
   }
 </style>
-<div id="top-container">
+<div id="top-bar-container">
   <div id="logo">
     <div id="logo-text">Ask Away</div>
   </div>
