src for profile photos missing /profile-photos/

--- a/ui/templates/profile-photo-viewer.html
+++ b/ui/templates/profile-photo-viewer.html
@@ -99,7 +99,7 @@
     </div>
     <!-- <div id="container-right"> -->
     <div id="photo-container">
-      <img id="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/{{ .Username}}">
+      <img id="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/profile-photos/{{ .Username}}">
       <div id="crop-filter"></div>
 
     </div>
