--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -154,7 +154,7 @@
     </div>
 
     <div id="photo-container">
-      <img id="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/{{ .Username}}"
+      <img id="profile-photo-image" src="https://d2ell5qlj9nplo.cloudfront.net/profile-photos/{{ .Username}}"
         alt="{{ .Username }}-profile-photo">
       <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
 
