changed sidebar text color to white

--- a/ui/templates/side-bar.html
+++ b/ui/templates/side-bar.html
@@ -9,7 +9,7 @@
     border-bottom: 2px solid darkseagreen;
     font-family: Cheto;
     font-size: 30px;
-    color: cornsilk;
+    color: white;
   }
 
   .side-bar-item:hover {
