--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -156,7 +156,7 @@
     <div id="photo-container">
       <img id="profile-photo-image" {{ if eq .PhotoVersion 0 }}
         src="https://d2ell5qlj9nplo.cloudfront.net/static/blank_avatar.svg" {{ else }}
-        src="https://d2ell5qlj9nplo.cloudfront.net/profile-photos/{{ .Username }}" {{end}}
+        src="https://d2ell5qlj9nplo.cloudfront.net/profile-photos/{{ .Username }}-{{ .PhotoVersion }}" {{end}}
         alt="{{ .Username }}-profile-photo">
       <div id="crop-filter" hx-get="/auth/profile/ui/profile-photo" hx-target="#page-content"></div>
 
