fixed Parson font not being requested; Darker green for side-bar to improve contrast

--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -38,7 +38,7 @@
       justify-content: space-between;
       gap: 20px;
       padding: 20px;
-      background-color: seagreen;
+      background-color: #21633E;
       border-radius: 10px;
       box-shadow: 5px 5px black;
       color: white;
@@ -91,7 +91,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      background-color: seagreen;
+      background-color: #21633E;
       mask: radial-gradient(transparent 0%, transparent 69%, seagreen 70%);
       z-index: 5;
     }
