--- a/ui/templates/top-bar.html
+++ b/ui/templates/top-bar.html
@@ -47,6 +47,7 @@
     background-color: skyblue;
     height: 65%;
     flex-grow: 1;
+    font-family: Parson;
     border-top: 3px solid black;
     border-right: 4px solid black;
     border-bottom: 4px solid black;
