--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -27,13 +27,12 @@
       font-style: normal;
       font-display: swap;
     }
-    }
 
     @font-face {
       font-family: 'Parson';
       src: url('https://d2ell5qlj9nplo.cloudfront.net/static/Parson-ExtraBoldItalic.ttf');
-      font-weight: 900;
-      font-style: italic;
+      font-weight: 700;
+      font-style: normal;
       font-display: swap;
     }
   </style>
