--- a/ui/templates/side-bar.html
+++ b/ui/templates/side-bar.html
@@ -27,7 +27,7 @@
     z-index: -1;
     height: 100%;
     border-right: 4px solid black;
-    background-color: seagreen;
+    background-color: #21633E;
     padding-top: 100px;
     gap: 50px;
   }
