changed button-component to simple css

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="A daily game to play with friends. Create a question and get points based on how popular your vote is among the other players!">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+  <script defer src="https://unpkg.com/htmx.org@1.9.12"></script>
   <style>
     @font-face {
       font-family: 'Aruma';
@@ -92,7 +92,7 @@
     }
   </style>
 
-  <script src='https://d2ell5qlj9nplo.cloudfront.net/js/button-component.js'> </script>
+  <!-- <script src='https://d2ell5qlj9nplo.cloudfront.net/js/button-component.js'> </script> -->
   {{ template "top-bar" .}}
   {{ template "side-bar" .Data}}
 
