--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -70,21 +70,32 @@
       gap: 20px;
     }
 
-    #page-back-btn {
-      display: block;
-      align-self: start;
+    button {
+      color: white;
       font-family: Aruma;
-      font-size: 25px;
-      background-color: seagreen;
-      color: antiquewhite;
       border-radius: 5px;
+      background-color: seagreen;
+      font-size: 25px;
+    }
+
+    button:hover {
+      background-color: darkolivegreen;
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
+
+    #page-back-btn {
+      align-self: start;
       padding: 5px;
       padding-right: 15px;
       padding-bottom: 7.5px;
     }
 
-    #page-back-btn:hover {
-      background-color: darkolivegreen;
+    button[type=submit] {
+      width: 100%;
+      padding: 10px;
     }
   </style>
 
@@ -126,11 +137,9 @@
     </div>
 
     <div class="form-item">
-      <button-component>
-        <button slot="button" type="submit">
-          Let's go!
-        </Button>
-      </button-component>
+      <button type="submit">
+        Let's go!
+      </Button>
 
     </div>
   </form>
