altered side-bar to minimize layout shift

--- a/ui/templates/side-bar.html
+++ b/ui/templates/side-bar.html
@@ -10,6 +10,7 @@
     font-family: Cheto;
     font-size: 30px;
     color: white;
+    height: 46px;
   }
 
   .side-bar-item:hover {
@@ -30,6 +31,7 @@
     background-color: #21633E;
     padding-top: 100px;
     gap: 50px;
+    width: 145px;
   }
 
   nav {
