changed font-display from optional back to swap

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -17,7 +17,7 @@
       src: url('https://d2ell5qlj9nplo.cloudfront.net/static/Aruma.ttf');
       font-weight: 700;
       font-style: normal;
-      font-display: optional;
+      font-display: swap;
     }
 
     @font-face {
