working on photo upload error

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -11,6 +11,8 @@
     content="A daily game to play with friends. Create a question and get points based on how popular your vote is among the other players!">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="https://unpkg.com/htmx.org@1.9.12"></script>
+
+  <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/response-targets.js"></script>
   <style>
     @font-face {
       font-family: 'Aruma';
