--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -2,7 +2,7 @@
 
 
 <div id="page-content" hx-ext="response-targets">
-  <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
+  <script defer src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
 
   <style id="transition-styles">
     @keyframes slide-in-from-left {
@@ -143,7 +143,7 @@
 
     </div>
   </form>
-  <div id="create-account-error"></div>
+  <div id="create-account-error" style="display:block;"></div>
 </div>
 
 
