--- a/ui/templates/upload-profile-photo.html
+++ b/ui/templates/upload-profile-photo.html
@@ -90,11 +90,21 @@
 
 
     #upload-photo-error {
-      color: red;
-      font-size: 20px;
+      color: black;
+      font-size: 14px;
       display: block;
+      font-family: Aruma;
     }
   </style>
+
+  <script>
+    document.addEventListener('htmx:afterRequest', e => {
+      if (e.detail.xhr.status.toString() == "413") {
+        let errorDiv = document.getElementById("upload-photo-error");
+        errorDiv.innerHTML = "File too large. Must be less than 2MB";
+      }
+    });
+  </script>
   <div id="container" hx-ext="response-targets">
     <form enctype="multipart/form-data" hx-post="/auth/profile/profile-photo" hx-target="#page-content"
       hx-swap="innerHTML" hx-target-error="#upload-photo-error">
@@ -107,6 +117,7 @@
           <button type="submit">
             Submit
           </button>
+          <div id="upload-photo-error"></div>
         </div>
 
 
@@ -119,7 +130,7 @@
         </div>
       </div>
     </form>
-    <div id="upload-photo-error"></div>
+
   </div>
 
   {{ end }}
