--- a/ui/templates/sign-in.html
+++ b/ui/templates/sign-in.html
@@ -87,18 +87,42 @@
     button[type=submit] {
       width: 100%;
       padding: 10px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 47px;
+    }
+
+    #loader-container {
+      position: relative;
+    }
+
+    .htmx-request #button-text {
+      display: none;
     }
   </style>
 
   <button id="page-back-btn" hx-get="/" hx-swap="outerHTML" hx-target="#page-content" hx-push-url="/">
     &larr;Back
   </button>
+  <script>
+    document.addEventListener('htmx:afterRequest', e => {
+      if (!e.detail.xhr.status.toString().startsWith('2')) {
+        let errorDiv = document.getElementById("sign-in-error");
+        errorDiv.innerHTML = "an error occurred";
+        errorDiv.style.display = 'block';
+      }
+    });
+  </script>
+
+
 
   <span id="sign-in-title">
     Sign In
   </span>
-  <form id="sign-in-form" hx-post="/login" hx-target="#page-content" hx-swap="outerHTML">
-    <div class="item">
+  <form id="sign-in-form" hx-post="/login" hx-target="#page-content" hx-swap="outerHTML" hx-indicator="#submit-button">
+    <div class=" item">
       <label for="username">
         Username{{ .Username}}
       </label>
@@ -110,9 +134,14 @@
       </label>
       <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit" value="Sign In">
-      Let's go!
+    <button type="submit" value="Sign In" id="submit-button">
+      {{ template "loader"}}
+      <div id="button-text">
+        Let's go!
+      </div>
     </button>
+    <div id="sign-in-error">
+    </div>
   </form>
 </div>
 {{ end }}
